nivasa-macros/tests/trybuild/controller_interceptor_empty.rs
use nivasa_macros::{controller, interceptor};

#[interceptor()]
#[controller("/users")]
struct UsersController;

fn main() {}
